# dinero-sv2

./: .gitignore  Cargo.toml  README.md
crates/dinero-sv2-codec/: Cargo.toml
crates/dinero-sv2-codec/src/: lib.rs  sv2.rs
crates/dinero-sv2-common/: Cargo.toml
crates/dinero-sv2-common/src/: lib.rs  sv2_messages.rs
crates/dinero-sv2-common/tests/: mainnet_vectors.rs
crates/dinero-sv2-gpu-miner/: Cargo.toml
crates/dinero-sv2-gpu-miner/shaders/: sha256d.cl  sha256d.metal
crates/dinero-sv2-gpu-miner/src/: main.rs  metal_backend.rs  opencl_backend.rs
crates/dinero-sv2-jd/: Cargo.toml
crates/dinero-sv2-jd/src/: block_filter.rs  codec.rs  coinbase.rs  filter_commitment.rs  lib.rs  merkle.rs  messages.rs  utreexo.rs
crates/dinero-sv2-jd/tests/: real_coinbases.rs  utreexo_live.rs
crates/dinero-sv2-miner/: Cargo.toml
crates/dinero-sv2-miner/src/: main.rs
crates/dinero-sv2-pool/: Cargo.toml
crates/dinero-sv2-pool/src/: accounting.rs  block.rs  lib.rs  main.rs  mapper.rs  rpc.rs  target.rs
crates/dinero-sv2-pool/tests/: regression_bad_utreexo_root.rs
crates/dinero-sv2-tp-sim/: Cargo.toml
crates/dinero-sv2-tp-sim/src/: main.rs
crates/dinero-sv2-transport/: Cargo.toml
crates/dinero-sv2-transport/src/: keys.rs  lib.rs  noise.rs
crates/dinero-tp/: Cargo.toml
crates/dinero-tp/examples/: testclient.rs
crates/dinero-tp/src/: main.rs  mapper.rs  rpc.rs
tests/vectors/: mainnet_coinbases.json  mainnet_headers.json  utreexo_live.json
