[workspace]
resolver = "2"
members = [
    "crates/dinero-sv2-common",
    "crates/dinero-sv2-codec",
    "crates/dinero-sv2-transport",
    "crates/dinero-sv2-tp-sim",
    "crates/dinero-tp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Trucker2827/dinero-sv2"
authors = ["Dinero Contributors"]
rust-version = "1.75"

[workspace.dependencies]
dinero-sv2-common    = { path = "crates/dinero-sv2-common" }
dinero-sv2-codec     = { path = "crates/dinero-sv2-codec" }
dinero-sv2-transport = { path = "crates/dinero-sv2-transport" }

anyhow     = "1"
thiserror  = "1"
proptest   = "1"
sha2       = "0.10"
hex        = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
clap       = { version = "4", features = ["derive"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64     = "0.22"
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
