[package]
name        = "dinero-sv2-common"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
rust-version = { workspace = true }
description = "Dinero Stratum V2 profile — message types and consensus invariants"

[dependencies]
thiserror = { workspace = true }
sha2      = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
hex        = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
