[package]
name        = "dinero-sv2-gpu-miner"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
rust-version = { workspace = true }
description = "Dinero Stratum V2 GPU miner — Metal on Apple Silicon, OpenCL on Linux/Windows, SV2 + Job Declaration"

[[bin]]
name = "dinero-sv2-gpu-miner"
path = "src/main.rs"

[dependencies]
dinero-sv2-common    = { workspace = true }
dinero-sv2-codec     = { workspace = true }
dinero-sv2-transport = { workspace = true }
dinero-sv2-jd        = { workspace = true }
anyhow     = { workspace = true }
hex        = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
clap       = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
objc  = "0.2"
core-graphics-types = "0.1"

# Linux + Windows GPU backend. `ocl` 0.19 wraps OpenCL 1.2; works on
# AMD ROCm, NVIDIA, Intel, and Mesa. Tested target: AMD Radeon Pro WX
# 2100 on the Dell Tower (mining rig from `dinero-solo-miner`).
[target.'cfg(not(target_os = "macos"))'.dependencies]
ocl = "0.19"
