[package]
name        = "dinero-sv2-miner"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
rust-version = { workspace = true }
description = "Dinero Stratum V2 CPU miner — long-running Noise NX + Job Declaration client for desktop/server rigs"

[[bin]]
name = "dinero-sv2-miner"
path = "src/main.rs"

[dependencies]
dinero-sv2-common    = { workspace = true }
dinero-sv2-codec     = { workspace = true }
dinero-sv2-transport = { workspace = true }
dinero-sv2-jd        = { workspace = true }
anyhow     = { workspace = true }
hex        = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
clap       = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
rayon      = "1"
num_cpus   = "1"
