[package]
name        = "dinero-sv2-transport"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
rust-version = { workspace = true }
description = "Dinero Stratum V2 transport — framing and (later) Noise NX wrapper"

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true }
snow      = { workspace = true }
rand      = { workspace = true }
hex       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
